--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ crashlytics-build.properties
 /[Uu]serSettings/Layouts/default-2021.dwlt
 /[Uu]serSettings/Layouts/default-2021.dwlt.meta
 
+# Python virtual environments & caches
+python_voice_service/.venv/
+python_voice_service/__pycache__/
+python_voice_service/.pytest_cache/
+
